--- a/.github/workflows/delpoy.yml
+++ b/.github/workflows/delpoy.yml
@@ -7,14 +7,14 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-test:
+  build-test-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Setup Node.jobs
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '22'
@@ -24,3 +24,9 @@ jobs:
 
       - name: Run tests
         run: npm test
+
+      - name: Trigger Render deployment
+          env:
+            RENDER_DEPLOY_HOOK_URL: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
+        run: |
+          curl -X POST "$RENDER_DEPLOY_HOOK_URL"
